ISSUE_28 #28 Removed old links

--- a/prototype/home.html
+++ b/prototype/home.html
@@ -63,32 +63,32 @@
               <div class="col-md-4 tight gutter-right">
 
                 <div class="project-menu-section">
-                  <a href="project-readme.html" class="tight">
+                  <a href="#" class="tight">
                     <h3>Home</h3>
                   </a>
                 </div>
                 <div class="project-menu-section">
-                  <a href="project-revisions.html" class="tight">
+                  <a href="#" class="tight">
                     <h3>Projects</h3>
                   </a>
                 </div>
                 <div class="project-menu-section">
-                  <a href="project-history.html" class="tight">
+                  <a href="#" class="tight">
                     <h3>Discover</h3>
                   </a>
                 </div>
                 <div class="project-menu-section">
-                  <a href="project-users.html" class="tight">
+                  <a href="#" class="tight">
                     <h3>Profile</h3>
                   </a>
                 </div>
                 <div class="project-menu-section">
-                  <a href="project-settings.html" class="tight">
+                  <a href="#" class="tight">
                     <h3>Settings</h3>
                   </a>
                 </div>
                 <div class="project-menu-section">
-                  <a href="project-statistics.html" class="tight">
+                  <a href="#" class="tight">
                     <h3>Statistics</h3>
                   </a>
                 </div>
