--- a/prototype/project.html
+++ b/prototype/project.html
@@ -66,37 +66,37 @@
                   </div>
                 </div>
                 <div class="project-menu-section">
-                  <a href="project-readme.html" class="tight">
+                  <a href="#" class="tight">
                     <h3>Readme</h3>
                   </a>
                 </div>
                 <div class="project-menu-section">
-                  <a href="project-revisions.html" class="tight">
+                  <a href="#" class="tight">
                     <h3>Revisions</h3>
                   </a>
                 </div>
                 <div class="project-menu-section">
-                  <a href="project-history.html" class="tight">
+                  <a href="#" class="tight">
                     <h3>History</h3>
                   </a>
                 </div>
                 <div class="project-menu-section">
-                  <a href="project-users.html" class="tight">
+                  <a href="#" class="tight">
                     <h3>Users</h3>
                   </a>
                 </div>
                 <div class="project-menu-section">
-                  <a href="project-settings.html" class="tight">
+                  <a href="#" class="tight">
                     <h3>Settings</h3>
                   </a>
                 </div>
                 <div class="project-menu-section">
-                  <a href="project-statistics.html" class="tight">
+                  <a href="#" class="tight">
                     <h3>Statistics</h3>
                   </a>
                 </div>
                 <div class="project-menu-section">
-                  <a href="project-download.html" class="tight">
+                  <a href="#" class="tight">
                     <h3>Download</h3>
                   </a>
                 </div>
