--- a/prototype/wizard.html
+++ b/prototype/wizard.html
@@ -52,7 +52,9 @@
 
       <div class="container-fluid">
         <div class="row">
-          <div class="col-md-12 padded-box">
+        <div class="col-md-1 padded-box">
+        </div>
+          <div class="col-md-10 padded-box">
             <div class="row tight">
               <div class="col-md-12 tight">
                 <div class="block">
@@ -144,7 +146,7 @@
                   <form role="form" class="standardform">
 
                     <div class="form-group">
-                      <div class="col-sm-4 margined">
+                      <div class="col-sm-6 margined">
                         <div class="input-group"> 
                         <input type="search" name="searchBy" id="searchBy" class="form-control" placeholder="Search user"/>
                         <span class="input-group-btn">
@@ -155,7 +157,7 @@
                         </div>
                       </div>
                       <div class="clearfix"></div>
-                      <div class="col-sm-4 margined">
+                      <div class="col-sm-6 margined">
                         <div class="input-group"> 
                           <span class="input-group-btn">
                             <button id="filter" class="btn btn-primary btn-block">
@@ -181,7 +183,7 @@
                       </div>
 
                       <div class="clearfix"></div>
-                      <div class="col-sm-4 margined">
+                      <div class="col-sm-6 margined">
                         <div class="input-group"> 
                           <span class="input-group-btn">
                             <button id="filter" class="btn btn-primary btn-block">
@@ -205,7 +207,7 @@
                         </select> 
                       </div>
                       <div class="clearfix"></div>
-                      <div class="col-sm-4 margined">
+                      <div class="col-sm-6 margined">
                           <div class="input-group"> 
                             <span class="input-group-btn">
                               <button id="filter" class="btn btn-primary btn-block">
@@ -271,7 +273,7 @@
                   </div>
                   <form role="form" class="standardform">  
                     <div class="form-group">
-                      <div class="col-sm-4 margined">
+                      <div class="col-sm-6 margined">
                         <div class="input-group"> 
                         <input type="search" name="searchBy" id="searchBy" class="form-control" placeholder="Search project"/>
                         <span class="input-group-btn">
@@ -282,7 +284,7 @@
                         </div>
                       </div>
                       <div class="clearfix"></div>
-                      <div class="col-sm-4 margined">
+                      <div class="col-sm-6 margined">
                         <div class="input-group"> 
                           <span class="input-group-btn">
                             <button id="filter" class="btn btn-primary btn-block">
@@ -306,7 +308,7 @@
                         </select> 
                       </div>
                       <div class="clearfix"></div>
-                      <div class="col-sm-4 margined">
+                      <div class="col-sm-6 margined">
                           <div class="input-group"> 
                             <span class="input-group-btn">
                               <button id="filter" class="btn btn-primary btn-block">
@@ -335,7 +337,7 @@
                 </div>
                 
                   <form role="form">  
-                      <button type="submit" class="btn btn-default pull-right">Submit</button>
+                      <button type="submit" class="btn btn-success pull-right">Submit</button>
                   </form>
                 
               </div>
