--- a/prototype/home.html
+++ b/prototype/home.html
@@ -9,9 +9,12 @@
 
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
+    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.19/angular.min.js"></script>
+    <script src="js/dashboard.js"></script>
 
   </head>
-  <body>
+  <body ng-app="3drepo">
     
     <div id="wrap">
 
@@ -24,7 +27,7 @@
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
             </button>
-            <a href="../" class="navbar-brand logo-pad"><img class="v-expand" src="images/logo.png" /></a>
+            <a href="../" class="navbar-brand logo-pad header-logo"><img class="v-expand" src="images/logo.png" /></a>
           </div>
           <nav class="collapse navbar-collapse bs-navbar-collapse" role="navigation">
            <form class="navbar-left tight v-expand" role="search">
@@ -42,7 +45,7 @@
         </div>
       </div>
 
-      <div class="container-fluid">
+      <div class="container-fluid"  ng-controller="DashboardCtrl">
         <div class="row">
           <div class="col-md-12 padded-box">
           
@@ -62,57 +65,66 @@
             <div class="row tight">
               <div class="col-md-4 tight gutter-right">
 
-                <div class="project-menu-section">
-                  <a href="#" class="tight">
-                    <h3>Home</h3>
-                  </a>
-                </div>
-                <div class="project-menu-section">
-                  <a href="#" class="tight">
-                    <h3>Projects</h3>
-                  </a>
-                </div>
-                <div class="project-menu-section">
-                  <a href="#" class="tight">
-                    <h3>Discover</h3>
-                  </a>
-                </div>
-                <div class="project-menu-section">
-                  <a href="#" class="tight">
-                    <h3>Profile</h3>
-                  </a>
-                </div>
-                <div class="project-menu-section">
-                  <a href="#" class="tight">
-                    <h3>Settings</h3>
-                  </a>
-                </div>
-                <div class="project-menu-section">
-                  <a href="#" class="tight">
-                    <h3>Statistics</h3>
-                  </a>
-                </div>
+                <div class="project-menu">
+                  <div class="project-menu-section" ng-class="{'project-menu-section-selected': isView('home')}">
+                    <a href="#/" class="tight" ng-click="setView('home')">
+                      <h3><i class="fa fa-home menu-icon"></i> Home</h3>
+                    </a>
+                  </div>
+                  <div class="project-menu-section" ng-class="{'project-menu-section-selected': isView('projects')}">
+                    <a href="#/" class="tight" ng-click="setView('projects')">
+                      <h3><i class="fa fa-cube menu-icon"></i> Projects</h3>
+                    </a>
+                  </div>
+                  <div class="project-menu-section" ng-class="{'project-menu-section-selected': isView('discover')}">
+                    <a href="#/" class="tight" ng-click="setView('discover')">
+                      <h3><i class="fa fa-cloud menu-icon"></i> Discover</h3>
+                    </a>
+                  </div>
+                  <div class="project-menu-section" ng-class="{'project-menu-section-selected': isView('profile')}">
+                    <a href="#/" class="tight" ng-click="setView('profile')">
+                      <h3><i class="fa fa-user menu-icon"></i> Profile</h3>
+                    </a>
+                  </div>
+                  <div class="project-menu-section" ng-class="{'project-menu-section-selected': isView('settings')}">
+                    <a href="#/" class="tight" ng-click="setView('settings')">
+                      <h3><i class="fa fa-gear menu-icon"></i> Settings</h3>
+                    </a>
+                  </div>
+                  <div class="project-menu-section" ng-class="{'project-menu-section-selected': isView('statistics')}">
+                    <a href="#/" class="tight" ng-click="setView('statistics')">
+                      <h3><i class="fa fa-signal menu-icon"></i> Statistics</h3>
+                    </a>
+                  </div>
+              </div>
+
               </div>
               <div class="col-md-8 tight">
                 <div class="col-md-12 tight">
-                  <div class="block placeholder-screenshot">
-                    <div class= "col-sm-12 margined block-header">
-                      <h3>Project 1</h3>
+                  <div class="block">
+                    <div class= "col-sm-12 block-header">
+                      <h3 ><span class="block-header-project-name">Project 1</span> <span class="block-header-by">by</span> <span class="block-header-author">Jozef</span></h3>
                     </div>
+                    <div class="clearfix"></div>
+                    <div class="placeholder-screenshot"></div>
                   </div>
                 </div>
                 <div class="col-md-12 tight">
-                  <div class="block placeholder-screenshot">
-                    <div class= "col-sm-12 margined block-header">
-                      <h3>Project 2</h3>
+                  <div class="block">
+                    <div class= "col-sm-12 block-header">
+                      <h3 ><span class="block-header-project-name">Project 2</span> <span class="block-header-by">by</span> <span class="block-header-author">Tim</span></h3>
                     </div>
+                    <div class="clearfix"></div>
+                    <div class="placeholder-screenshot"></div>
                   </div>
                 </div>
                 <div class="col-md-12 tight">
-                  <div class="block placeholder-screenshot">
-                    <div class= "col-sm-12 margined block-header">
-                      <h3>Project 2</h3>
+                  <div class="block">
+                    <div class= "col-sm-12 block-header">
+                      <h3 ><span class="block-header-project-name">Project 3</span> <span class="block-header-by">by</span> <span class="block-header-author">Frederic</span></h3>
                     </div>
+                    <div class="clearfix"></div>
+                    <div class="placeholder-screenshot"></div>
                   </div>
                 </div>
               </div>
