--- a/prototype/wizard.html
+++ b/prototype/wizard.html
@@ -24,7 +24,7 @@
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
             </button>
-            <a href="../" class="navbar-brand logo-pad"><img class="v-expand" src="images/logo.png" /></a>
+            <a href="../" class="navbar-brand logo-pad header-logo"><img class="v-expand" src="images/logo.png" /></a>
           </div>
           <nav class="collapse navbar-collapse bs-navbar-collapse" role="navigation">
            <form class="navbar-left tight v-expand" role="search">
@@ -41,14 +41,6 @@
           </nav>
         </div>
       </div>
-
-<!-- 
-      <div class="container-fluid">
-        <div class="row">
-          <div class="col-md-12 anouncement">
-          </div>
-        </div>
-      </div> -->
 
       <div class="container-fluid">
         <div class="row">
@@ -99,7 +91,6 @@
                       <input type="email" class="form-control" id="project-name">
                       </div>
                     </div>   
-  
 
                   </form>
                 </div>
@@ -174,7 +165,7 @@
                         </div>
 
                       </div>
-                      <div class="col-sm-2 permission">
+                      <div class="col-sm-4 permission">
                         <select class="form-control">
                         <option value="one">Admin</option>
                         <option value="two">Member</option>
@@ -199,7 +190,7 @@
                         </div>
 
                       </div>
-                      <div class="col-sm-2 permission">
+                      <div class="col-sm-4 permission">
                         <select class="form-control">
                         <option value="one">Admin</option>
                         <option value="two">Member</option>
@@ -222,7 +213,7 @@
                         </span>
                           </div>
                       </div>
-                      <div class="col-sm-2 permission">
+                      <div class="col-sm-4 permission">
                         <select class="form-control">
                         <option value="one">Admin</option>
                         <option value="two">Member</option>
@@ -234,8 +225,9 @@
 
                   </form>   
                 </div>
+
                 <div class="block">
-                <div class= "col-sm-12 margined block-header">
+                  <div class= "col-sm-12 margined block-header">
                     <h3>Type</h3>
                   </div>
 
@@ -267,8 +259,9 @@
 
                   </form>   
                 </div>
+
                 <div class="block">
-                <div class= "col-sm-12 margined block-header">
+                  <div class= "col-sm-12 margined block-header">
                     <h3>Federation</h3>
                   </div>
                   <form role="form" class="standardform">  
@@ -300,7 +293,7 @@
                         </div>
 
                       </div>
-                      <div class="col-sm-2 permission">
+                      <div class="col-sm-4 permission">
                         <select class="form-control">
                         <option value="one">HEAD</option>
                         <option value="two">Rev 1</option>
@@ -323,7 +316,7 @@
                         </span>
                           </div>
                       </div>
-                      <div class="col-sm-2 permission">
+                      <div class="col-sm-4 permission">
                         <select class="form-control">
                         <option value="one">HEAD</option>
                         <option value="two">Rev 1</option>
