ISSUE_28 #28 Adding download button

--- a/prototype/project.html
+++ b/prototype/project.html
@@ -83,6 +83,10 @@
                     </a>
                   </div>
                 </div>
+
+                <form role="form">  
+                      <button type="submit" class="btn btn-success pull-right"><i class="fa fa-download menu-icon"></i>Download</button>
+                  </form>
               </div>
               <div class="col-md-8 tight">
                 
