--- a/prototype/project.html
+++ b/prototype/project.html
@@ -85,7 +85,7 @@
                 </div>
 
                 <form role="form">  
-                      <button type="submit" class="btn btn-success pull-right"><i class="fa fa-download menu-icon"></i>Download</button>
+                      <button type="submit" class="btn btn-success pull-left"><i class="fa fa-download menu-icon"></i>Download</button>
                   </form>
               </div>
               <div class="col-md-8 tight">
