ISSUE_28 #28 Added show diff button

--- a/prototype/project.html
+++ b/prototype/project.html
@@ -55,12 +55,14 @@
           <div class="col-md-12 padded-box">
             <div class="row tight">
               <div class="col-md-4 tight gutter-right">
+
+                <!-- Project name and author -->
                 <div class="project-title">
                   <h2>Car Project 1</h2>
                   <p>Owner: Jozef</p>
                 </div>
-                <!-- Split button -->
-                <!-- Single button -->
+                
+                <!-- Branch selector -->
                 <div class="row tight">
                 <div class="btn-group menu-button">
                   <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-expanded="false">
@@ -74,6 +76,7 @@
                 </div>
                 </div>
 
+                <!-- Revision selector -->
                 <div class="row tight">
                 <div class="btn-group  menu-button">
                   <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-expanded="false">
@@ -89,35 +92,21 @@
                 </div>
                 </div>
 
-    <!--             <div class="block">
-                  <div class="block-title" >Branch: </div>
+                <!-- Diff selector -->
+                <div class="row tight">
+                <div class="btn-group  menu-button">
+                  <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-expanded="false">
+                    <i class="fa fa-copy menu-icon"></i><span class="button-title">Diff with: </span><span class="button-keyword">None</span> <span class="caret"></span>
+                  </button>
+                  <ul class="dropdown-menu" role="menu">
+                    <li><a href="#/"><span class="button-keyword">None</span></a></li>
+                    <li class="divider"></li>
+                    <li><a href="#/"><span class="button-keyword">ne39d</span></a></li>
+                    <li><a href="#/"><span class="button-keyword">4kkdf</span></a></li>
+                    <li><a href="#/"><span class="button-keyword">g90sd</span></a></li>
+                  </ul>
                 </div>
-                <div class="block">
-                  <h3 >Revision</h3>
-                </div> -->
-
-<!--                 <div class="project-menu">
-                  <div class="project-menu-section" ng-class="{'project-menu-section-selected': isView('info')}">
-                    <a href="#/" class="tight" ng-click="setView('info')">
-                      <h3><i class="fa fa-info-circle menu-icon"></i> Info</h3>
-                    </a>
-                  </div>
-                  <div class="project-menu-section" ng-class="{'project-menu-section-selected': isView('revisions')}">
-                    <a href="#/" class="tight" ng-click="setView('revisions')">
-                      <h3><i class="fa fa-random menu-icon"></i> Revisions</h3>
-                    </a>
-                  </div>
-                  <div class="project-menu-section" ng-class="{'project-menu-section-selected': isView('log')}">
-                    <a href="#/" class="tight" ng-click="setView('log')" >
-                      <h3><i class="fa fa-save menu-icon"></i> Log</h3>
-                    </a>
-                  </div>
-                  <div class="project-menu-section" ng-class="{'project-menu-section-selected': isView('settings')}">
-                    <a href="#/" class="tight" ng-click="setView('settings')">
-                      <h3><i class="fa fa-gear menu-icon"></i> Settings</h3>
-                    </a>
-                  </div>
-                </div> -->
+                </div>
 
                 <form role="form">  
                   <button type="submit" class="btn btn-success pull-left"><i class="fa fa-download menu-icon"></i>Download</button>
