ISSUE # 28 - Some bug fixes to external libraries

--- a/prototype/x3dexample.html
+++ b/prototype/x3dexample.html
@@ -25,8 +25,7 @@
     <script type="text/javascript" src="../public/js/external/bootstrap.min.js"></script>
     <script type="text/javascript" src="../public/js/external/bootstrap-dialog.min.js"></script>
     <link rel="stylesheet" href="../public/css/external/ui.fancytree.min.css" type="text/css"/>
-    <script type="text/javascript" src="../public/js/external/jquery.fancytree-all.js"></script>
-    <link rel="stylesheet" type="text/css" href="../public/css/external/ui.css"/>
+    <link rel="stylesheet" type="text/css" href="../public/css/ui.css"/>
     <body ng-app="3drepoapp">
       <nav role="navigation" class="navbar whitenavbar navbar-fixed-top">
         <div class="container-fluid">
