ISSUE #28 - Added Google Maps ground plane

--- a/prototype/x3dexample.html
+++ b/prototype/x3dexample.html
@@ -76,6 +76,17 @@
                 </IndexedLineSet>
               </Shape>
             </Transform>
+			<Transform rotation="1,0,0,4.7124">
+				<Transform translation="0,0,-10">
+				<Shape>
+					<Appearance>
+						<ImageTexture url="images/ground.png">
+						</ImageTexture>
+					</Appearance>
+					<Plane center="87, 53" size="500,500" lit=false></Plane>
+				</Shape>
+				</Transform>
+			</Transform>
           </scene>
         </x3d>
       </div>
