Added missing font awesome fonts to prevent cross domain errors in Firefox. Added OST blurb.

--- a/prototype/project.html
+++ b/prototype/project.html
@@ -9,8 +9,8 @@
     <script type="text/javascript" src="../public/jquery.min.js"></script>
     <script type="text/javascript" src="../public/js/external/bootstrap.min.js"></script>
     <link rel="stylesheet" href="../public/css/external/bootstrap.min.css"/>
-    <link href="css/style.css" rel="stylesheet">
-    <link href="../public/css/external/font-awesome.min.css" rel="stylesheet">
+    <link href="css/style.css" rel="stylesheet" />
+    <link href="css/font-awesome.min.css" rel="stylesheet" />
     <script type="text/javascript" src="../public/js/external/angular.min.js"></script>
      <script src="js/project.js"></script>
 
@@ -137,13 +137,44 @@
                     <div class= "col-sm-12 margined block-header">
                       <h3>Readme</h3>
                     </div>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum sit amet semper ante. In arcu augue, auctor et bibendum in, aliquet at nunc. Sed nisl orci, dictum id suscipit sed, pretium at eros. Vivamus ut dolor vel sapien molestie tempus. Donec mauris sapien, malesuada nec metus quis, eleifend tristique ipsum. Suspendisse sagittis risus eget mollis suscipit. Sed a metus maximus, volutpat urna vitae, convallis nulla. Suspendisse pulvinar ultrices elementum. Suspendisse potenti. Morbi ac tellus efficitur mi ornare viverra non sit amet ipsum. Sed ullamcorper auctor ex, quis suscipit arcu commodo bibendum. Curabitur vel quam et neque tempus luctus id id magna. In blandit elit eget lacinia varius. Ut lectus nulla, euismod in sapien at, elementum ullamcorper massa. In condimentum, arcu eget aliquet commodo, nunc lacus semper ex, ac eleifend mauris ex vel augue. Vivamus convallis pulvinar nisl convallis efficitur.
+		    <h2>We are leading the transformation of the Queen Elizabeth Olympic Park Stadium into an all-round multi-use venue</h2>
+		    <p>
+We are using sustainable construction methods like incorporating recycled features of the existing facility into the new Stadium and re-using crushed demolition material. 
+
+At construction peak the project will employ up to 400 people, and we are working to ensure the employment of local people where possible. We have also committed to create apprenticeships which will amount to 7% of the total workforce.
+
+The new venue will host five matches during the Rugby World Cup 2015 and will be the permanent home of West Ham United Football Club from 2016.
                     <br>
                     <br>
-                    Donec congue justo sapien, vel auctor nisi euismod eget. Praesent efficitur libero est, laoreet convallis libero egestas quis. Nam sit amet elit quam. Ut a aliquet felis. Cras aliquam auctor purus, dictum vestibulum justo. Maecenas sed egestas dolor, a sodales dolor. Mauris sed dui aliquet, venenatis risus eu, blandit metus. Nunc egestas fringilla ante, non pulvinar libero gravida in. Donec placerat eros vel dui viverra, ut bibendum orci sagittis. Cras dignissim id ante id posuere. Pellentesque eros erat, consectetur quis metus in, aliquet sodales justo. Quisque elementum blandit sollicitudin. Nullam iaculis nunc sed lacinia consequat. Nunc hendrerit sollicitudin ex sit amet pretium. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.
+Balfour Beatty, the international infrastructure group, today announces that it has been awarded a &pound;154 million contract to carry out the full transformation works to the London 2012 Olympic Stadium for its operator, E20 Stadium LLP, a joint venture between the London Legacy Development Corporation and Newham Council. This new contract encompasses the &pound;41 million Stadium roof contract Balfour Beatty was awarded in the summer.
                     <br>
                     <br>
-                    Mauris et tincidunt sapien. Morbi vel imperdiet enim, vel molestie mi. Fusce lectus sapien, viverra sed nisi vel, tincidunt rhoncus leo. Curabitur sit amet orci tortor. Nullam et leo quis odio fringilla ornare a nec libero. Nunc eu fringilla tortor. Praesent non lacus ultrices, fringilla odio nec, pellentesque dui. Aliquam ornare vestibulum commodo. Sed facilisis pellentesque purus sit amet scelerisque. Donec vel ultrices purus. Suspendisse purus ante, cursus in libero a, imperdiet faucibus elit. Quisque viverra odio at enim sollicitudin sollicitudin.
+
+Balfour Beatty will lead the transformation of the Stadium into an all-round multi-use venue, delivering a lasting sporting, cultural and commercial legacy in East London.
+                    <br>
+                    <br>
+
+The new venue will host five matches during the Rugby World Cup 2015 and will be the permanent home of West Ham United Football Club from 2016. The venue will also become the new national competition Stadium for athletics in the UK as well as hosting elite international athletics events and other sporting, cultural and community events. A new community athletics track will also be provided next to the main Stadium.
+                    <br>
+                    <br>
+
+Sustainable construction methods will include features of the existing facility being recycled and incorporated into the new Stadium and the re-use of crushed demolition material, existing balustrades and sanitary ware.
+
+
+At construction peak the project will employ up to 400 people. Balfour Beatty will work with WorkPlace, Newham Council's employment service, to ensure the employment of local people where possible. Balfour Beatty has also committed to create apprenticeships which will amount to 7% of the total workforce.
+
+Once reconfigured the Stadium's cable net roof, 84 metres wide at its deepest point, will be the largest cantilevered roof in the world covering every Stadium seat, improving acoustics and spectator experience.
+
+Balfour Beatty Chief Executive, Andrew McNaughton said: "We are delighted to be continuing our activity at the Queen Elizabeth Olympic Park supporting the legacy commitment made as part of the London 2012 Olympic and Paralympic Games.
+
+During construction, our firm commitment to the use of local labour and the creation of apprenticeships will continue to benefit the local community and the wider industry and, upon completion, the Stadium will provide a first-class sporting and cultural facility for many generations to come. Balfour Beatty is proud to be associated with this project."
+
+Works commence on site early in 2014 and are due for completion in the spring of 2016.
+
+
+<br>
+<a href="http://www.balfourbeatty.com/index.asp?pageid=42&newsid=516">Read more</a>
+		    
                     </p>
                   </div>
                 </div>
