--- a/prototype/project.html
+++ b/prototype/project.html
@@ -58,7 +58,7 @@
 
                 <!-- Project name and author -->
                 <div class="project-title">
-                  <h2>Car Project 1</h2>
+                  <h2>OST Federated</h2>
                   <p>Owner: Jozef</p>
                 </div>
                 
