--- a/prototype/project.html
+++ b/prototype/project.html
@@ -148,20 +148,28 @@
 
     </script>
 
-    <!-- Revisions template -->
-    <!-- <script type="text/ng-template" id="revisions.html">
-      <div class= "col-sm-12 margined block-header">
-        <h3>Timeline</h3>
-      </div>
+    <!-- Timeline template -->
+    <script type="text/ng-template" id="revisions.html">
 
-      <div class="col-sm-12 month-block" ng-repeat="(date,revisions) in rev_by_day">
-      <hr class="fancy-line"><h3>{{date}}</h3>
-      <div class="commit-block" ng-repeat="revision in revisions">
-        <span class="commit-revision">Revision</span> <a href="#/"><span class="commit-number">{{revision.name}}</span></a> <span class="commit-by"> by </span> <span class="commit-author">Jozef</span><span class="commit-date">{{revision.date.split(',')[1]}}</span>
-        <p>{{revision.message}}</p>
+      <ng-include src="'common.html'"></ng-include>
+      <div class="col-md-8 tight">
+        <ng-include src="'menu.html'"></ng-include>
+
+        <div class="block">
+          <div class= "col-sm-12 margined block-header">
+            <h3>Timeline</h3>
+          </div>
+
+          <div class="col-sm-12 month-block" ng-repeat="(day,revisions) in data.revisions_by_day">
+            <hr class="fancy-line"><h3>{{day}}</h3>
+            <div class="commit-block" ng-repeat="revision in revisions">
+              <span class="commit-revision">Revision</span> <a href="#/"><span class="commit-number">{{revision.name}}</span></a> <span class="commit-by"> by </span> <span class="commit-author">Jozef</span><span class="commit-date">{{revision.date.split(',')[1]}}</span>
+              <p>{{revision.message}}</p>
+            </div>
+          </div>
+        </div>
       </div>
-      </div>
-    </script> -->
+    </script>
 
     <script type="text/ng-template" id="log.html">
 
