--- a/prototype/project.html
+++ b/prototype/project.html
@@ -42,7 +42,7 @@
             <i class="fa fa-code-fork menu-icon"></i><span class="button-title">Branch: </span><span class="button-keyword">{{data.current_branch.name}}</span> <span class="caret "></span>
           </button>
           <ul class="dropdown-menu" role="menu">
-            <li ng-repeat="branch in data.info.branches"><a href="#/" ng-click="setBranch(branch)"><span class="button-keyword">{{branch.name}}</span></a></li>
+            <li ng-repeat="branch in data.info.branches"><a href="#/" ng-click="setBranch(branch)"><span class="button-keyword">{{branch}}</span></a></li>
           </ul>
         </div>
         </div>
@@ -84,7 +84,7 @@
         <ul class="nav nav-tabs nav" role="tablist">
         <li ng-class="{'active': isView('info')}"><a class="dashboard-tab" ng-click="go('info')"><i class="fa fa-info-circle menu-icon"></i>Info</a></li>
         <li ng-class="{'active': isView('comments')}"><a class="dashboard-tab" ng-click="go('comments')"><i class="fa fa-comments menu-icon"></i>Comments <span class="badge">{{data.current_revision.n_comments}}</span></a></li>
-        <li ng-class="{'active': isView('revisions')}"><a class="dashboard-tab" ng-click="go('revisions')"><i class="fa fa-tag menu-icon"></i>Revisions</a></li>
+        <li ng-class="{'active': isView('revisions')}"><a class="dashboard-tab" ng-click="go('revisions')"><i class="fa fa-tag menu-icon"></i>Revisions <span class="badge">{{data.current_branch.n_revisions}}</span></a></li>
         <li ng-class="{'active': isView('log')}"><a class="dashboard-tab" ng-click="go('log')"><i class="fa fa-save menu-icon"></i>Log</a></li>        
         <li ng-class="{'active': isView('settings')}"><a class="dashboard-tab" ng-click="go('settings')"><i class="fa fa-gear menu-icon"></i>Settings</a></li> 
       </ul>
@@ -193,6 +193,8 @@
             </div>
           </div>
 
+          <pagination class="pull-right" items-per-page="pagination.itemsperpage" total-items="pagination.totalItems" ng-model="pagination.currentPage" ng-change="pageChanged()" previous-text="&lsaquo;" next-text="&rsaquo;" first-text="&laquo;" last-text="&raquo;"></pagination>
+
         </div>
       </div>
     </script>
@@ -244,6 +246,9 @@
               </div>
             </div>
           </div>
+
+          <pagination class="pull-right" items-per-page="pagination.itemsperpage" total-items="pagination.totalItems" ng-model="pagination.currentPage" ng-change="pageChanged()" previous-text="&lsaquo;" next-text="&rsaquo;" first-text="&laquo;" last-text="&raquo;"></pagination>
+
         </div>
 
       </div>
